# azure-storage-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  ENHANCEMENTS.md  GET_STARTED.md  GITHUB_SETUP.md  Invoke-StorageAssessment.ps1  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Setup-Prerequisites.ps1  TESTING_CHECKLIST.md  TEST_RESULTS.md  assess_storage.py  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  QUICKSTART.md  TESTING.md
examples/: config-production.yaml  config-quick.yaml  config-simple.yaml  sample_summary.md
examples/scenarios/: finops-review.yaml  fslogix-optimization.yaml  security-audit.yaml
reports/: README.md
src/: __init__.py
src/analyzers/: __init__.py  cost_analyzer.py  governance_analyzer.py  security_analyzer.py
src/collectors/: __init__.py  blob_containers.py  file_shares.py  metrics_collector.py  storage_accounts.py
src/reporters/: __init__.py  csv_reporter.py  json_reporter.py  markdown_reporter.py  pdf_reporter.py
src/utils/: __init__.py  auth.py  config.py  helpers.py
