[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-storage-assessment"
version = "1.0.0"
description = "Comprehensive toolkit for assessing Azure Storage Accounts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "mobieus10036", email = ""}
]
keywords = ["azure", "storage", "assessment", "finops", "security", "governance", "cost-optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/mobieus10036/azure-storage-analyzer"
Repository = "https://github.com/mobieus10036/azure-storage-analyzer"
Issues = "https://github.com/mobieus10036/azure-storage-analyzer/issues"
Documentation = "https://github.com/mobieus10036/azure-storage-analyzer#readme"

dependencies = [
    "azure-identity>=1.15.0",
    "azure-mgmt-storage>=21.1.0",
    "azure-storage-blob>=12.19.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-monitor>=6.0.2",
    "azure-mgmt-subscription>=3.1.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/your-org/az-storage-assessment"
Repository = "https://github.com/your-org/az-storage-assessment"
Issues = "https://github.com/your-org/az-storage-assessment/issues"
Documentation = "https://github.com/your-org/az-storage-assessment/blob/main/README.md"

[project.scripts]
assess-storage = "assess_storage:main"

[tool.setuptools]
packages = ["src", "src.collectors", "src.analyzers", "src.reporters", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pylint.messages_control]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
